--- a/lobster-app/public/index.html
+++ b/lobster-app/public/index.html
@@ -13,6 +13,9 @@
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property='twitter:title' content="lobsternft.io"/>
+    <meta property='twitter:image' content="%PUBLIC_URL%/summary_image.png"/>
+    <meta name="twitter:card" content="summary_large_image"/>
     <meta
       name="description"
       content="All lobsters should have a name, would you agree? Help us in giving a name to Charles' lobster... "
